<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_alignStart="@+id/btnCancel"
        android:layout_alignLeft="@+id/btnCancel"
        android:layout_alignBottom="@+id/etFromDateTime"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="From: "
        android:hint="From: "
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etFromDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownId" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="YYYY-MM-DD HH:MM:SS"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="60dp"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignLeft="@+id/tvFromDateTime"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="37dp"
        android:text="To: "
        android:layout_marginRight="37dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etToDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFromDateTime"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="YYYY-MM-DD HH:MM:SS"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFromDateTime"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignLeft="@+id/tvFromDateTime"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="98dp"
        android:text="Keywords: "
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Loco"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="261dp"
        android:layout_height="52dp"
        android:layout_alignStart="@+id/OK"
        android:layout_alignLeft="@+id/OK"
        android:layout_centerVertical="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="77dp"
        android:hint="Keyword"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvKeywords"
        app:layout_constraintTop_toBottomOf="@+id/etLongi"
        tools:ignore="MissingConstraints"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="146dp"
        android:onClick="cancel"
        android:text="Cancel"
        app:backgroundTint="#257EC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="144dp"
        android:onClick="go"
        android:text="OK"
        app:backgroundTint="#257EC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Loco"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="Location:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etToDateTime" />

    <EditText
        android:id="@+id/etLati"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="83dp"
        android:ems="10"
        android:hint="Latitude"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etKeywords"
        app:layout_constraintStart_toEndOf="@+id/Loco"
        app:layout_constraintTop_toBottomOf="@+id/etToDateTime"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLongi"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:hint="Longitude"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etToDateTime"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>