<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:onClick="scrollPhotos"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/Right"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:contentDescription="RightButton"
        android:onClick="scrollPhotos"
        android:scaleType="fitCenter"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toTopOf="@+id/Filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toEndOf="@+id/Left" />

    <Button
        android:id="@+id/Filter"
        android:layout_width="97dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="75dp"
        android:onClick="search"
        android:text="Filter"
        app:backgroundTint="#257EC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="384dp"
        android:layout_height="329dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        android:cropToPadding="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/win_20201110_18_20_11_pro"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/Left"
        android:layout_width="97dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="43dp"
        android:background="@color/white"
        android:contentDescription="LeftButton"
        android:onClick="scrollPhotos"
        android:scaleType="fitCenter"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Timestamp"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/timeField"
        app:layout_constraintBaseline_toBaselineOf="@+id/Location"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/locationField"
        app:layout_constraintBottom_toTopOf="@+id/weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="106dp"
        android:layout_height="100dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="60dp"
        android:adjustViewBounds="true"
        android:contentDescription="Camera"
        android:cropToPadding="true"
        android:onClick="takePhoto"
        android:scaleType="centerCrop"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caption" />

    <EditText
        android:id="@+id/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Caption"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <Button
        android:id="@+id/share"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="share"
        android:text="Share"
        app:layout_constraintBaseline_toBaselineOf="@+id/Filter"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="deletePhoto"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="14dp"
        android:onClick="record"
        android:text="Record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/Filter"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>